Connected wallet page to backend, started explore page frontend
